# alpino-tokenizer

./: .gitignore  .travis.yml  Cargo.toml  README.md  flake.nix
.builds/: archlinux.yml
.github/: dependabot.yml
.github/workflows/: rust.yml
alpino-tokenize/: Cargo.toml
alpino-tokenize/src/: conll.rs  main.rs  traits.rs
alpino-tokenizer/: Cargo.toml  build.rs
alpino-tokenizer-sys/: Cargo.toml  build.rs
alpino-tokenizer-sys/src/: lib.rs
alpino-tokenizer/proto/: transducer.proto
alpino-tokenizer/src/: alpino.rs  ctokenize.rs  fst.rs  lib.rs  postproc.rs  preproc.rs  proto.rs  small_string.rs  tokenizer.rs  util.rs
alpino-tokenizer/testdata/: README  toy.proto
ci/: script.sh
