[package]
name = "alpino-tokenize"
version = "0.3.0"
authors = ["Daniël de Kok <me@danieldk.eu>"]
edition = "2018"
description = "Wrapper around the Alpino tokenizer for Dutch"
homepage = "https://github.com/danieldk/alpino-tokenizer"
repository = "https://github.com/danieldk/alpino-tokenizer.git"
license = "LGPL-2.1-or-later"

[dependencies]
alpino-tokenizer = { path = "../alpino-tokenizer", version = "0.3" }
clap = "2"
conllu = "0.6.0"
lazy_static = "1"
regex = "1"
stdinout = "0.4"
