[package]
name = "alpino-tokenize"
version = "0.4.0"
authors = ["Daniël de Kok <me@danieldk.eu>"]
edition = "2021"
description = "Wrapper around the Alpino tokenizer for Dutch"
homepage = "https://github.com/danieldk/alpino-tokenizer"
repository = "https://github.com/danieldk/alpino-tokenizer.git"
license = "LGPL-2.1-or-later"
rust-version = "1.60.0"

[dependencies]
alpino-tokenizer = { path = "../alpino-tokenizer", version = "0.4" }
clap = "3"
clap_complete = "3"
conllu = "0.8"
lazy_static = "1"
regex = "1"
stdinout = "0.4"
udgraph = "0.8"
