[package]
name = "alpino-tokenizer-sys"
version = "0.2.0"
authors = ["Daniël de Kok <me@danieldk.eu>"]
description = "Low-level wrapper around the Alpino tokenizer for Dutch"
homepage = "https://github.com/danieldk/alpino-tokenizer"
repository = "https://github.com/danieldk/alpino-tokenizer.git"
license = "LGPL-2.1-or-later"
edition = "2018"

[build-dependencies]
cc = "1"

[dependencies]
widestring = "0.4"

[dev-dependencies]
libc = "0.2"
