[package]
name = "alpino-tokenizer"
version = "0.3.0"
authors = ["Daniël de Kok <me@danieldk.eu>"]
description = "Wrapper around the Alpino tokenizer for Dutch"
homepage = "https://github.com/danieldk/alpino-tokenizer"
repository = "https://github.com/danieldk/alpino-tokenizer.git"
license = "Apache-2.0"
edition = "2018"

[dependencies]
lazy_static = "1"
prost = "0.12"
prost-derive = "0.12"
regex = "1"
static_assertions = "1"
thiserror = "1"
